# mysyslog

./: CMakeLists.txt  README.md
src/: mysyslog.c
